<resources>
    <string name="app_name">Home Pantry</string>
    <string name="submit">Submit</string>
    <string name="add_item">Add Item</string>
    <string name="item_title_hint">Product name</string>
    <string name="item_barcode_hint">Barcode</string>
    <string name="expiration_date">Date of Expiry</string>
    <string name="obligatory_name">Inserting product name is required!</string>
    <string name="item_not_found">Item not found in the database! Please fill in the data yourself.</string>
    <string name="scan">Scan</string>

    <string name="notification_has_expired"> has expired </string>
    <string name="notification_will_expire_in_one_day"> will expire in one day!</string>
    <string name="notification_will_expire">will expire</string>
    <string name="notification_days_ago"> days ago!</string>
    <string name="notification_products_have_expired">products have expired!</string>
    <string name="notification_channel_name">Food expiry reminders</string>
    <string name="notification_channel_description">Sends reminder when an item is about to be expired and when an item has already expired.</string>
    <string name="notification_title">Products expiry reminder!</string>

    <string name="product_image_content_description">Product image</string>
    <string name="product_expiry">Product expiry:</string>
    <string name="days">days</string>
    <string name="take_photo">Take Photo</string>
    <string name="change_photo">Change photo</string>
    <string name="undo">Undo</string>
    <string name="item_deleted">Item deleted!</string>
    <string name="content_description_change_photo">Change photo</string>
    <string name="calendar_icon_content_description">Calendar icon</string>
    <string name="calendar_date_of_expiry">Date of expiry</string>
    <string name="content_description_change_expiry_date">Change expiry date</string>
    <string name="action_search">Search</string>
</resources>