<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddAndEditItemActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/barcode_icon"
                android:layout_margin="16dp"
                android:contentDescription="@string/product_image_content_description"
                android:src="@drawable/ic_barcode_96"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/item_barcode_hint"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/barcode"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/picture_item"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/product_image_content_description"
                    android:src="@drawable/baseline_image_placeholder"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_text_input_layout"
                    android:hint="@string/item_title_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_baseline_add_photo_alternate_36"
                    app:endIconContentDescription="@string/content_description_change_photo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"
                        android:inputType="text"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading_indicator"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/calendar_icon"
            android:layout_margin="16dp"
            android:contentDescription="@string/calendar_icon_content_description"
            android:src="@drawable/ic_baseline_event_black_48dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_text_input_layout"
            android:hint="@string/calendar_date_of_expiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_edit_calendar_36"
            app:endIconContentDescription="@string/content_description_change_expiry_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="addItem"/>
    </LinearLayout>
</ScrollView>